--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:title="Options"
+            android:title="Settings"
             android:id="@+id/menuOptions"
     />
 
