--- a/app/src/main/res/layout/activity_end_quiz.xml
+++ b/app/src/main/res/layout/activity_end_quiz.xml
@@ -3,45 +3,62 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".EndQuizActivity" android:background="@drawable/background_light_blue">
 
     <TextView
-            android:text="Final Score: 0/0"
+            android:text="Final Score: 0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tvEndScore" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvEndRank" android:textSize="30sp" android:textColor="#373F47"/>
+            android:id="@+id/tvEndScore"
+            android:textSize="36sp" android:textColor="#373F47"
+            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"/>
+
+    <ImageView
+            android:layout_width="330dp"
+            android:layout_height="220dp" app:srcCompat="@drawable/end_quiz_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageViewEnd"
+            app:layout_constraintTop_toBottomOf="@+id/tvEndRank" android:layout_marginTop="16dp"/>
+
     <TextView
             android:text="Weekly Rank: 134"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndRank"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/btPlayAgain" android:textSize="18sp" android:textColor="#373F47"
-            android:visibility="invisible"/>
+            android:textSize="24sp" android:textColor="#373F47"
+            android:visibility="gone" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvEndScore" android:textAlignment="center"/>
     <Button
             android:text="Play Again"
-            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btPlayAgain" android:layout_width="75pt"
-            android:onClick="playAgain" android:textSize="18sp"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btPlayAgain" android:layout_width="225dp"
+            android:onClick="playAgain" android:textSize="24sp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewEnd"/>
     <Button
             android:text="Main Menu"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/btMainMenu" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btPlayAgain" android:layout_width="75pt"
-            android:onClick="mainMenu" android:textSize="18sp"/>
-    <TextView
-            android:text="A new high score!"
+            app:layout_constraintTop_toBottomOf="@+id/btPlayAgain" android:layout_width="225dp"
+            android:onClick="mainMenu" android:textSize="24sp"/>
+
+    <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tvEndStatus" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvEndScore"
-            android:textSize="50sp" android:textColor="#373F47" android:visibility="invisible"/>
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent">
+    </com.google.android.gms.ads.AdView>
+
 </android.support.constraint.ConstraintLayout>
