--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
             android:layout_height="220dp" app:srcCompat="@drawable/menu_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-            app:layout_constraintHorizontal_bias="0.493"/>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar2"/>
 
     <Button
             android:text="Start Quiz"
